python.txt
Microsoft Windows [version 10.0.17763.1577]
(c) 2018 Microsoft Corporation. Tous droits réservés.

C:\Users\mahdi>python
Python 3.9.6 (tags/v3.9.6:db3ff76, Jun 28 2021, 15:26:21) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> hello world
  File "<stdin>", line 1
    hello world
          ^
SyntaxError: invalid syntax
>>> 'hello world'
'hello world'
>>> print<'hello world'>
  File "<stdin>", line 1
    print<'hello world'>
                        ^
SyntaxError: invalid syntax
>>> print<'hello world'>
  File "<stdin>", line 1
    print<'hello world'>
                        ^
SyntaxError: invalid syntax
>>> x = 4
>>> x = x + 6
>>> x
10
>>> print<x>
  File "<stdin>", line 1
    print<x>
            ^
SyntaxError: invalid syntax
>>> print <x>
  File "<stdin>", line 1
    print <x>
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(<x>)?
>>> print (<x>)
  File "<stdin>", line 1
    print (<x>)
           ^
SyntaxError: invalid syntax
>>> x = 10
>>> x
10
>>> x = ' samadi '
>>> x
' samadi '
>>> is_logged = true
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'true' is not defined
>>> is_logged = True
>>> is_logged
True
>>> is
  File "<stdin>", line 1
    is
    ^
SyntaxError: invalid syntax
>>>
>>>
>>> is_logged = False
>>> is_logged
False
>>> x = y = z = "samadi"
>>>  "samadi"
  File "<stdin>", line 1
    "samadi"
IndentationError: unexpected indent
>>> x
'samadi'
>>> y
'samadi'
>>> z
'samadi'
>>>
>>> print<'connecte' = is_logged>
  File "<stdin>", line 1
    print<'connecte' = is_logged>
    ^
SyntaxError: cannot assign to comparison
>>> print<'connecte' = x>
  File "<stdin>", line 1
    print<'connecte' = x>
    ^
SyntaxError: cannot assign to comparison
>>> print<'connecte' = x >
  File "<stdin>", line 1
    print<'connecte' = x >
    ^
SyntaxError: cannot assign to comparison
>>> print<'connecte' + x >
  File "<stdin>", line 1
    print<'connecte' + x >
                          ^
SyntaxError: invalid syntax
>>> print<'connecte' + x>
  File "<stdin>", line 1
    print<'connecte' + x>
                         ^
SyntaxError: invalid syntax
>>> print<"connecte" + x>
  File "<stdin>", line 1
    print<"connecte" + x>
                         ^
SyntaxError: invalid syntax
>>> clear
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'clear' is not defined
>>> x = round<4,34>
  File "<stdin>", line 1
    x = round<4,34>
                   ^
SyntaxError: invalid syntax
>>> x = round<4,34>
  File "<stdin>", line 1
    x = round<4,34>
                   ^
SyntaxError: invalid syntax
>>> x = round<4.34>
  File "<stdin>", line 1
    x = round<4.34>
                   ^
SyntaxError: invalid syntax
>>> x = round<4.34>
  File "<stdin>", line 1
    x = round<4.34>
                   ^
SyntaxError: invalid syntax
>>> str = 'samadi'
>>> str
'samadi'
>>> str"""samadi is here now.
... samadi is coning.
... samadi is back """
  File "<stdin>", line 1
    str"""samadi is here now.
samadi is coning.
samadi is back """
       ^
SyntaxError: invalid syntax
>>> samadi is back """
... samadi is amar """
  File "<stdin>", line 1
    samadi is back """
samadi is amar """
                   ^
SyntaxError: invalid syntax
>>> str
'samadi'
>>> str"""samadi is here now,
... samadi is amar
... samadi is here now,
... samadi is back """
  File "<stdin>", line 1
    str"""samadi is here now,
samadi is amar
samadi is here now,
samadi is back """
       ^
SyntaxError: invalid syntax
>>> str
'samadi'
>>> str"""samadi is here now,
... samadi is amar """
  File "<stdin>", line 1
    str"""samadi is here now,
samadi is amar """
       ^
SyntaxError: invalid syntax
>>> samadi is back """
... str
... samadi is back """
  File "<stdin>", line 1
    samadi is back """
str
samadi is back """
                   ^
SyntaxError: invalid syntax
>>> str
'samadi'
>>> str"""samadi is here now,
... samadi is back,
... samadi is here now,
... samadi is back """
  File "<stdin>", line 1
    str"""samadi is here now,
samadi is back,
samadi is here now,
samadi is back """
       ^
SyntaxError: invalid syntax
>>>
>>> str
'samadi'
>>> str"""samadi is here now,
... samadi is coning,
... samadi is back """
  File "<stdin>", line 1
    str"""samadi is here now,
samadi is coning,
samadi is back """
       ^
SyntaxError: invalid syntax
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>> str
'samadi'
>>>
>>>
>>>
>>>
>>> str = ''' sir tkawad ,
... huruffntvytvnhtuvy '''
>>> str
' sir tkawad ,\nhuruffntvytvnhtuvy '
>>> name = "samadi"
>>> print<name{0}>
  File "<stdin>", line 1
    print<name{0}>
              ^
SyntaxError: invalid syntax
>>> print<name<name>>
  File "<stdin>", line 1
    print<name<name>>
                     ^
SyntaxError: invalid syntax
>>> x = 3 + 4
>>> x
7
>>> x+=6
>>> x
13
>>> x = x-3
>>> x
10
>>> x -= 4
>>> x
6
>>> x = x * 5
>>> x
30
>>> x -=10
>>> x
20
>>> x = x/100
>>> x
0.2
>>> x = x / 100
>>> x
0.002
>>> x = x // 100
>>> x
0.0
>>> x  = 300
>>> x = x // 100
>>> x
3
>>> x = 2
>>> x = x**
  File "<stdin>", line 1
    x = x**
           ^
SyntaxError: invalid syntax
>>> x = x**2
>>> x
4
>>> x ==3
False
>>> x = 3
>>> x
3
>>> x ==3
True
>>> x ==3
True
>>> x > 2
True
>>> x = 4
>>> x > 5
False
>>> x = false
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'false' is not defined
>>> mehdi = false
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'false' is not defined
>>> x = 4
>>> x<5
True
>>> x = 5
>>> 5 = 5
  File "<stdin>", line 1
    5 = 5
    ^
SyntaxError: cannot assign to literal
>>> 5 = x
  File "<stdin>", line 1
    5 = x
    ^
SyntaxError: cannot assign to literal
>>> x = 5
>>> x<6
True
>>>
>>>
>>>
>>>
>>> x !=3
True
>>> x<=3
False
>>> ex
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ex' is not defined
>>> x>3 and x#5
5
>>> x!=3
True
>>> x>=3
True
>>> x > 3 and x!=5
False
>>> x>=3
True
>>>